crates/rtb-app/tests/trybuild/feature_non_exhaustive.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/trybuild/feature_non_exhaustive.rs:7:11
   |
 7 |     match f {
   |           ^ pattern `_` not covered
   |
note: `Feature` defined here
  --> src/features.rs
   |
   | pub enum Feature {
   | ^^^^^^^^^^^^^^^^
   = note: the matched value is of type `Feature`
   = note: `Feature` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
17 ~         Feature::Changelog => "changelog",
18 ~         _ => todo!(),
   |
